new words for the dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-  "cSpell.words": ["erro", "reav", "Rubx"]
+  "cSpell.words": [
+    "DBUG",
+    "erro",
+    "fmsn",
+    "fmts",
+    "fnam",
+    "fval",
+    "mkdir",
+    "reav",
+    "reavs",
+    "Rubx"
+  ]
 }
