--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "3", features = ["cargo"] }
 num_cpus = "1"
 reqwest = { version = "0.11", features = ["blocking"] }
 serde_json = "1"
