--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM rust:1.60
-RUN su rustup component add rustfmt --toolchain 1.60.0-x86_64-unknown-linux-gnu
-RUN su rustup component add clippy --toolchain 1.60.0-x86_64-unknown-linux-gnu
-RUN su rustup component add rust-analysis --toolchain 1.60.0-x86_64-unknown-linux-gnu
-RUN su rustup component add rust-docs --toolchain 1.60.0-x86_64-unknown-linux-gnu
-RUN su rustup component add rust-src --toolchain 1.60.0-x86_64-unknown-linux-gnu
-RUN su rustup component add rls --toolchain 1.60.0-x86_64-unknown-linux-gnu
+RUN rustup component add rustfmt --toolchain 1.60.0-x86_64-unknown-linux-gnu
+RUN rustup component add clippy --toolchain 1.60.0-x86_64-unknown-linux-gnu
+RUN rustup component add rust-analysis --toolchain 1.60.0-x86_64-unknown-linux-gnu
+RUN rustup component add rust-docs --toolchain 1.60.0-x86_64-unknown-linux-gnu
+RUN rustup component add rust-src --toolchain 1.60.0-x86_64-unknown-linux-gnu
+RUN rustup component add rls --toolchain 1.60.0-x86_64-unknown-linux-gnu
