--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM rust:1.60
-RUN su rustup component add rustfmt
-RUN su rustup component add clippy
-RUN su rustup component add rust-analysis
-RUN su rustup component add rust-docs
-RUN su rustup component add rust-src
-RUN su rustup component add rls
+RUN rustup component add rustfmt
+RUN rustup component add clippy
+RUN rustup component add rust-analysis
+RUN rustup component add rust-docs
+RUN rustup component add rust-src
+RUN rustup component add rls
